# CG24

./: .gitignore  README.md
Fase1/: generator  plane.2d
Fase1/src/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  plane.xml
Fase1/src/CMakeScripts/: ReRunCMake.make
Fase1/src/Debug/: engine
Fase1/src/engine/: config.hpp  engine.cpp
Fase1/src/engine.xcodeproj/: project.pbxproj
Fase1/src/engine.xcodeproj/project.xcworkspace/xcuserdata/flaviodrsousa.xcuserdatad/: UserInterfaceState.xcuserstate
Fase1/src/engine.xcodeproj/xcshareddata/xcschemes/: engine.xcscheme
Fase1/src/engine.xcodeproj/xcuserdata/flaviodrsousa.xcuserdatad/xcschemes/: xcschememanagement.plist
Fase1/src/engine_src/: config.cpp  engine.cpp
Fase1/src/generator/: box.cpp  box.hpp  cone.cpp  cone.hpp  generator.cpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
Fase1/src/generator_src/: box.cpp  box.hpp  generator.cpp  plane.cpp  plane.hpp
Fase1/src/utils/: primitive.cpp  primitive.hpp
Fase1/testes/: box_test.xml  cone_test.xml  plane_test.xml  sphere_test.xml
Fase1/tinyXML/: tinystr.cpp
Fase2/: Makefile  generator  solar_system.xml
Fase2/outputs/: ring.3d  sphere.3d
Fase2/solar_system/: ring.3d  sphere.3d
Fase2/src/: CMakeCache.txt  CMakeLists.txt
Fase2/src/CMakeScripts/: ReRunCMake.make
Fase2/src/Debug/: engine
Fase2/testes/: box_test.xml  cone_test.xml  plane_test.xml  ring_test.xml  solar_flat_test.xml  solar_system.xml  solar_test.xml  sphere_test.xml
Fase3/outputs/: plane.3d  ring.3d  sphere.3d
Fase3/src/: CMakeLists.txt  cmake_install.cmake
Fase3/testes/: box_test.xml  plane_test.xml  solar_system.xml
Fase4/: generator
Fase4/outputs/: bezier.3d  box.3d  cone.3d
Fase4/src/: CMakeCache.txt  CMakeLists.txt
Fase4/testes/: box_test.xml  ring_test.xml
(+54 files in other folders)
